# simple-state-flow

./: LICENSE  README.md  pyproject.toml
.junie/: guidelines.md
docs/: article.md  article_details.md  article_structure.md  sections_description.md  topic_details.md
docs/charts/: api_pagination_workflow.mmd
src/: flows.py  nodes.py
src/simple_state_flow/: __init__.py  flows.py  nodes.py
src/simple_state_flow/examples/: README.md  account_recovery.py  ai_moderation.py  api_sync.py  backup_verification.py  cicd_pipeline.py  cloud_provisioning.py  data_migration.py  email_campaign.py  expense_reimbursement.py  file_import.py  fraud_detection.py  health_check.py  iot_firmware.py  kyc_verification.py  llm_extraction.py  mfa_flow.py  password_reset.py  payment_gateway.py  proxy_scraper.py  refund_approval.py  ssl_renewal.py  subscription_billing.py  support_ticketing.py  use_cases.md  user_onboarding.py  video_transcoding.py
src/state_flow/: __init__.py  flows.py
src/state_flow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: example_workflow.puml  test_async_flow.py  test_random_flow.py
