[project]
name = "state-flow"
version = "0.1.0"
description = "A graph-based state flow library using Pydantic"
authors = [
    { name = "Marc Nealer" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "build>=1.4.0",
]
