[project]
name = "simple-state-flow"
version = "0.1.0"
description = "A graph-based state flow library using Pydantic"
authors = [
    { name = "Marc Nealer" }
]
license = "MIT"
urls = { repository = "https://gitlab.com/mystuff6091446/state-flow.git" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "build>=1.4.0",
]
